Fix offcenter gift info.

--- a/wedding.css
+++ b/wedding.css
@@ -45,7 +45,7 @@ a:visited { color: rgb(0, 0, 238); }
 @media only screen and (max-device-width: 600px) {
   .page-container,
   .content-container,
-  .gift-info,
   .flourish { max-width: none; }
-  .gift-info { margin: 0px; }
+  .gift-info { max-width: 1000px; margin: auto; }
+  .d-btn { height: 50px; }
 }
